2004-02-28  Mark Kettenis  <kettenis@gnu.org>

	* amd64-tdep.c (amd64_frame_cache): Fix comment.

2004-02-28  Andrew Cagney  <cagney@redhat.com>

	* utils.c: Use "", instead of <>, to include readline.
	tui/tui-win.c, tui/tui.c, tui/tui-hooks.c: Ditto.
	* tracepoint.c, top.c, symmisc.c, symfile.c: Ditto.
	* source.c, solib.c, exec.c, event-top.c: Ditto.
	* corelow.c, completer.c, cli/cli-setshow.c: Ditto.
	* cli/cli-dump.c, cli/cli-cmds.c: Ditto.
	* Makefile.in: Update all dependencies.
	(readline_tilde_h, readline_history_h): Define.
	(readline_headers): Delete.

2004-02-28  Mark Kettenis  <kettenis@gnu.org>

	* config/djgpp/fnchange.lst: Rename "config/i386/nm-linux64.h" to
	"config/i386/nm-lx64.h" and "config/i386/tm-linux64.h" to
	"config/i386/tm-lx64.h".

	* config/djgpp/fnchange.lst: Rename "amd64-linux-tdep.c" to
	"amd64-ltdep.c" and "amd64-linux-nat.c" to "amd64-lnat.c".  Remove
	rules for "x86-64-linux-tdep.c" and "x86-64-linux-nat.c".

2004-02-28  Andrew Cagney  <cagney@redhat.com>

	* dwarf2-frame.h (struct gdbarch): Add opaque declaration.

	* breakpoint.c (_initialize_breakpoint): Use
	"add_setshow_auto_boolean_cmd.  Better word-wrap help messages.
	Add help to show command.

2004-02-28  Mark Kettenis  <kettenis@gnu.org>

	* i386-nat.c: Reformat to be closer to coding standards.
	(i386_handle_nonaligned_watchpoint): Rename local variable `rv' to
	`retval'.  Make variables `align' and `size' local to while-loop.
	(i386_stopped_data_address): Rename local variable `ret' to `addr'.
	(_initialize_i386_nat): New prototype.

	* tui/tui.c: Include <readline/readline.h> instead of
	"readline/readline.h".  Include it after <term.h> and
	"gdb_curses.h".

2004-02-27  Andrew Cagney  <cagney@redhat.com>

	* hppa-tdep.c (hppa_gdbarch_init): On 32-bit systems always use
	the new frame unwind code.
	(hppa_frame_cache): Use PCOQ_HEAD_REGNUM instead of PC_REGNUM.
	(hppa_frame_prev_register): Compute PCOQ_TAIL_REGNUM from
	PCOQ_HEAD_REGNUM.
